--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -3,8 +3,11 @@
 	<App>
 		<pages>
 			<Page title="{i18n>title}">
-				<content></content>
+				<content>
+					sdsd
+				</content>
 			</Page>
 		</pages>
 	</App>
 </mvc:View>
+
